--- a/src/index.scss
+++ b/src/index.scss
@@ -30,6 +30,7 @@ $secondary-white: #fbfbfb;
 $footer-color: #2c2c2c;
 $salary-green: #2ec1ac;
 $salary-red: #e97171;
+$old-price-color: #b0b0b0;
 $dots-color: #d8d8d8;
 $text-size: 16px;
 
@@ -128,7 +129,7 @@ button {
     position: relative;
 
     &:before {
-      content: '';
+      content: "";
       width: 25px;
       height: 25px;
       border: 1px solid $accent-color;
@@ -145,11 +146,7 @@ button {
 .header .container {
   display: flex;
   justify-content: space-between;
-  background: linear-gradient(
-    to right,
-    $bcg-main-color 964px,
-    $bcg-secondary-color 964px
-  );
+  background: linear-gradient(to right, $bcg-main-color 964px, $bcg-secondary-color 964px);
   padding: 40px 100px;
 
   & div {
@@ -182,6 +179,46 @@ button {
       font-family: Gilroy-M;
       font-size: $text-size;
       color: $main-text-color;
+    }
+
+    &__item {
+      position: relative;
+
+      &.drop-active .dropdown__list {
+        opacity: 1;
+        pointer-events: all;
+      }
+    }
+
+    & .dropdown__list {
+      opacity: 0;
+      pointer-events: none;
+      position: absolute;
+      width: max-content;
+      height: max-content;
+      bottom: 0;
+      left: -5px;
+      transform: translateY(100%);
+      backdrop-filter: blur(15px);
+      background-color: #fcf8f37a;
+      color: $third-text-color;
+      padding: 5px;
+      display: flex;
+      flex-direction: column;
+      border-radius: 6px;
+      gap: 3px;
+      min-width: 117px;
+      z-index: 10;
+      transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    & .dropdown__item {
+      cursor: pointer;
+      transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1);
+
+      &:hover {
+        opacity: 0.65;
+      }
     }
   }
 
@@ -246,11 +283,7 @@ button {
   &.container {
     padding: 0;
     padding-top: 97px;
-    background: linear-gradient(
-      to right,
-      $bcg-main-color 964px,
-      $bcg-secondary-color 964px
-    );
+    background: linear-gradient(to right, $bcg-main-color 964px, $bcg-secondary-color 964px);
   }
 
   &__title-wrapper {
@@ -298,7 +331,43 @@ button {
 
   &__slider {
     &__img {
-      transform: translateX(-70%);
+      transform: translateX(-60%);
+    }
+
+    &__state-wrapper {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: absolute;
+      top: 22px;
+      right: 100px;
+      width: 687px;
+
+      & div:nth-child(2) {
+        display: flex;
+        gap: 8px;
+
+        & button {
+          width: 48px;
+          height: 48px;
+          background-color: #f6ddcc;
+          border-radius: 50%;
+          transition: all 0.3s ease-in;
+
+          &:hover {
+            box-shadow:
+              rgba(17, 17, 26, 0.1) 0px 4px 16px,
+              rgba(17, 17, 26, 0.1) 0px 8px 24px,
+              rgba(17, 17, 26, 0.1) 0px 16px 56px;
+          }
+        }
+
+        & button:nth-child(2) {
+          width: 48px;
+          height: 48px;
+          background-color: $accent-color;
+        }
+      }
     }
   }
 
@@ -409,6 +478,12 @@ button {
         flex-direction: column;
         gap: 8px;
         padding: 16px 16px 30px 16px;
+
+        & div {
+          display: flex;
+          align-items: center;
+          gap: 16px;
+        }
       }
 
       &__img {
@@ -424,6 +499,14 @@ button {
         font-size: 20px;
         font-family: Gilroy-S;
         color: $main-text-color;
+
+        &--old {
+          font-size: 16px;
+          font-family: Gilroy-R;
+          color: $old-price-color;
+          line-height: 100%;
+          text-decoration: line-through;
+        }
       }
 
       &__discount {
@@ -439,6 +522,7 @@ button {
         color: $white;
         font-size: 16px;
         font-family: Gilroy-M;
+        line-height: 150%;
 
         &--hidden {
           display: none;
@@ -481,6 +565,7 @@ button {
         &__link {
           display: flex;
           align-items: center;
+          gap: 11px;
           font-family: Gilroy-S;
           font-size: 16px;
           line-height: 150%;
@@ -586,7 +671,8 @@ button {
       filter: drop-shadow(0 7px 2mm rgba(0, 0, 0, 0.1));
 
       &:hover {
-        box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px,
+        box-shadow:
+          rgba(17, 17, 26, 0.1) 0px 4px 16px,
           rgba(17, 17, 26, 0.1) 0px 8px 24px,
           rgba(17, 17, 26, 0.1) 0px 16px 56px;
       }
@@ -644,6 +730,7 @@ button {
   align-items: center;
   width: 100%;
   position: relative;
+  margin-bottom: 44px;
 
   &__title {
     margin-bottom: 32px;
@@ -682,7 +769,8 @@ button {
     flex-direction: column;
 
     &.active {
-      box-shadow: rgba(97, 97, 97, 0.1) 0px 5px 55px,
+      box-shadow:
+        rgba(97, 97, 97, 0.1) 0px 5px 55px,
         rgba(97, 97, 97, 0.1) 0px -15px 70px;
       margin-bottom: 44px;
     }
@@ -703,5 +791,208 @@ button {
   &__card__date {
     font-family: Gilroy-R;
     font-size: 14px;
+  }
+}
+
+.share {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  max-width: 1440px;
+  overflow: hidden;
+
+  &__header-wrapper {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 8px;
+  }
+
+  &__description {
+    font-size: 20px;
+    font-family: Gilroy-S;
+    color: $third-text-color;
+  }
+
+  &__content-wrapper {
+    display: flex;
+    gap: 16px;
+    margin-bottom: 87px;
+
+    transform: translateX(6%);
+  }
+
+  & .content__left-wrp {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+
+    & div {
+      display: flex;
+      gap: 16px;
+    }
+
+    & div:nth-child(1) {
+      align-items: flex-end;
+    }
+
+    & div:nth-child(1) img:nth-child(2) {
+      max-height: 312px;
+    }
+
+    & div:nth-child(2) img:nth-child(2) {
+      max-height: 242px;
+    }
+  }
+
+  & .content__right-wrp {
+    display: flex;
+    gap: 16px;
+
+    & div:nth-child(1) {
+      display: flex;
+      align-items: center;
+    }
+
+    & div:nth-child(2) {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+
+      & div {
+        display: flex;
+        gap: 16px;
+        flex-direction: row;
+      }
+
+      & div:nth-child(1) {
+        align-items: flex-end;
+      }
+
+      & div:nth-child(2) img:nth-child(2) {
+        max-height: 196px;
+      }
+    }
+  }
+}
+
+.footer {
+  padding: 80px 0 50px 0;
+  border-top: 2px solid $dots-color;
+
+  &__content-wrapper {
+    display: flex;
+    gap: 80px;
+
+    & .title {
+      font-size: 24px;
+      color: $black;
+      line-height: auto;
+    }
+  }
+
+  &__logo-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    max-width: 249px;
+  }
+
+  &__logo {
+    font-family: Gilroy-B;
+    font-size: 24px;
+    line-height: 120%;
+    color: $black;
+    transition: all 0.2s ease-in-out;
+    width: max-content;
+
+    &:hover {
+      opacity: 0.6;
+    }
+  }
+
+  &__information__list,
+  &__menu,
+  &__menu__list,
+  &__account,
+  &__account__list,
+  &__social,
+  &__social__list,
+  &__subscribe {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+
+  &__menu__item a,
+  &__account__item a,
+  &__social__item a {
+    font-size: 16px;
+    line-height: 150%;
+    font-family: Gilroy-M;
+    color: $third-text-color;
+    transition: all 0.2s ease-in-out;
+
+    &:hover {
+      opacity: 0.65;
+    }
+  }
+
+  &__information__item,
+  &__information__item a,
+  &__social__link {
+    display: flex;
+    gap: 8px;
+    align-items: center;
+
+    font-size: 16px;
+    line-height: 150%;
+    font-family: Gilroy-R;
+    color: $third-text-color;
+    transition: all 0.3s ease-in;
+  }
+
+  &__information__item a:hover {
+    color: $accent-color;
+  }
+
+  & .social__logo {
+    width: 20px;
+    height: 20px;
+
+    & path {
+      fill: $third-text-color;
+    }
+  }
+
+  &__subscribe div {
+    display: flex;
+    gap: 4px;
+    height: 45px;
+  }
+
+  &__subscribe__input {
+    padding: 10px 12px;
+    background-color: $card-bcg-color;
+    transition: 0.3s ease-in;
+    min-width: 242px;
+
+    &::placeholder {
+      color: $input-color;
+      font-family: Gilroy-R;
+      font-size: 16px;
+      line-height: 150%;
+    }
+
+    &:hover,
+    &:focus {
+      box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+      outline: none;
+    }
+  }
+  &__subscribe__btn {
+    background-color: $accent-color;
+    padding: 11px;
   }
 }
